# rs_http_worker

./: .gitlab-ci.yml  Cargo.toml  Dockerfile  README.md
src/: main.rs  message.rs
tests/: message_test_1.json  message_test_2.json
