[package]
name = "http_worker"
version = "0.1.0"
authors = ["Marc-Antoine Arnaud <marc.antoine@nomalab.com>"]

[dependencies]
#rs_amqp_worker = { path="../../ebu/rs_amqp_worker" }
amqp_worker = "0.1.3"

reqwest = "0.8.1"
futures = "^0.1"
tokio-core = "= 0.1.13"
lapin-futures = "^0.10"
serde = "^1.0"
serde_json = "^1.0"
serde_derive = "^1.0"
